# cliprelay

./: .gitignore  AI_PROGRESS.md  Cargo.toml  FEATURE_SUMMARY.md  PROJECT_ATLAS.md  README.md  update-application.ps1
.deploy-relay-src/: Cargo.toml
.github/workflows/: ci.yml  release.yml
cliprelay-client/: Cargo.toml  build.rs
cliprelay-client/assets/: app.manifest  cliprelay-client.rc
cliprelay-client/src/: lib.rs  main.rs  ui_layout.rs  ui_state.rs
cliprelay-client/tests/: ui_state.rs  windows_manifest.rs
cliprelay-core/: Cargo.toml
cliprelay-core/src/: lib.rs
cliprelay-relay/: Cargo.toml
cliprelay-relay/src/: lib.rs  main.rs
cliprelay-relay/tests/: e2e_relay.rs
deploy/: cliprelay-relay.service  install-relay-systemd.sh
docs/: HOW_IT_WORKS.md
