[workspace]
members = [
    "cliprelay-core",
    "cliprelay-relay",
    "cliprelay-client",
]
resolver = "2"

[workspace.package]
version = "1.0.7"
edition = "2024"
license = "MIT"
authors = ["ClipRelay Contributors"]

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
bytes = "1.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hkdf = "0.12"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
arboard = "3.4"
hex = "0.4"






