[package]
name = "cliprelay-client"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
arboard.workspace = true
clap.workspace = true
cliprelay-core = { path = "../cliprelay-core" }
futures.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = { version = "1.0", features = ["high-dpi"] }

[build-dependencies]
embed-resource = "3.0"
