[package]
name = "cliprelay-client"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "cliprelay-client"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arboard.workspace = true
clap.workspace = true
cliprelay-core = { path = "../cliprelay-core" }
futures.workspace = true
base64 = "0.22"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = { version = "1.0", features = ["high-dpi"] }
windows-sys = { version = "0.48", features = ["Win32_System_Registry", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_Time"] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
