[package]
name = "cliprelay-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
cliprelay-core = { path = "../cliprelay-core" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
